implement streaming responses
- more configuration options
