# Backend/Controllers/ConversationController.cs
@@ -16,4 +16,8 @@ public class ConversationController(IOpenAiClient openAiClient) : ControllerBase
   public async Task<ActionResult<ChatMessage?>> GetResponse([FromBody] Conversation conversation)
     => await openAiClient.GetChatCompletions(conversation.Messages);
 
+  [HttpPost("stream")]
+  [ProducesResponseType(typeof(IAsyncEnumerable<string>), (int) HttpStatusCode.OK)]
+  public IAsyncEnumerable<string> GetResponseAsyncEnumerable([FromBody] Conversation conversation, CancellationToken cancellationToken)
+  => openAiClient.GetChatCompletionsAsyncEnumerable(conversation.Messages, cancellationToken);
 }
