# Backend/openapi.json
@@ -90,6 +90,41 @@
         }
       }
     },
+    "/api/conversation/stream": {
+      "post": {
+        "tags": [
+          "Conversation"
+        ],
+        "operationId": "Conversation_GetResponseAsyncEnumerable",
+        "requestBody": {
+          "x-name": "conversation",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Conversation"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/history/user/{userId}": {
       "get": {
         "tags": [
